k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: express
  template:
    metadata:
      labels:
        component: express
    spec:
      containers:
        - name: express
          image: anderson1218/ec-api-server:v1
          ports:
            - containerPort: 8080
